Avoid using flexbox gap as is not supported <14 iOS safari.  Use margin bottom

--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -11,15 +11,14 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 15px;
 }
 
 .sidebar h4 {
   margin-top: 0px;
 }
 
-.sidebar .plant-selector {
-  margin-bottom: 10px;
+.plant-selector {
+  margin-bottom: 15px;
 }
 
 @media only screen and (max-width: 810px) {
@@ -28,6 +27,6 @@
   }
 
   h4 {
-    font-size: 1.25em !important
+    font-size: 1.25em !important;
   }
 }
